# osm_to_parquet

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  Untitled-1.ipynb  build.rs  pyproject.toml
.devcontainer/: devcontainer.json
osmpq/: arrow.py  blobs.py  blobs_to_elements.py  element_converter.py  elements.py  helper.py  io.py  main.py  parquet.py  pbf_converter.py  pbf_to_blobs.py  spark.py  split.py
osmpq/cli/: pbf_extract.py
osmpq/osm/: blob.py  elements.py  types.py
osmpq/protos/: fileformat_pb2.py  fileformat_pb2.pyi  osmformat_pb2.py  osmformat_pb2.pyi
python/: main.py  osm.ipynb
python/protos/: fileformat_pb2.py  osmformat_pb2.py
src/: io.rs  lib.rs  main.rs  pipeline.rs  processor.rs  progress.rs
src/osm/: blobs.rs  elements.rs  mod.rs  pbf.rs  types.rs
src/parquet/: mod.rs  parquet.rs  records.rs  schemas.rs  writer.rs
