[package]
name = "osm_to_parquet"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
arrow = "56.2.0"
byteorder = "1.5.0"
bytes = "1.10.1"
console = "0.16.0"
crossbeam-channel = "0.5.15"
flate2 = "1.1.2"
futures = "0.3.31"
glob = "0.3.2"
hashbrown = "0.15.4"
indicatif = "0.17.11"
itertools = "0.14.0"
lz4 = "1.28.1"
lzma = "0.2.2"
lzma-rs = "0.3.0"
num = "0.4.3"
num-traits = "0.2.19"
object_store = { version = "0.12.4", features = ["aws", "http"] }
parquet = "56.2.0"
prost = "0.14.1"
prost-build = "0.13.5"
url = "2.5.7"
zstd = "0.13.3"

[build-dependencies]
glob = "0.3.2"
prost-build = "0.13.5"
