[package]
name = "osm_to_parquet"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
arrow = "57.0.0"
byteorder = "1.5.0"
bytes = "1.10.1"
clap = { version = "4.5.51", features = ["derive"] }
console = "0.16.0"
crossbeam-channel = "0.5.15"
flate2 = "1.1.2"
futures = "0.3.31"
glob = "0.3.2"
indicatif = "0.18.2"
itertools = "0.14.0"
lz4 = "1.28.1"
lzma = "0.2.2"
lzma-rs = "0.3.0"
num = "0.4.3"
num-traits = "0.2.19"
object_store = { version = "0.12.4", features = ["aws", "http"] }
parquet = "57.0.0"
prost = "0.14.1"
prost-build = "0.14.1"
readable = "0.16.0"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"
zstd = "0.13.3"

[build-dependencies]
glob = "0.3.2"
prost-build = "0.14.1"
