[project]
name = "osm-to-parquet"
version = "0.1.0"
description = "Convert OSM PBF files to Parquet format"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fsspec[s3]>=2025.9.0",
    "more-itertools>=10.7.0",
    "protobuf>=6",
    "pyarrow>=23",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["F401"]

[tool.ruff.lint.isort]
case-sensitive = true
force-single-line = true
