[project]
name = "osm-to-parquet"
version = "0.1.0"
description = "Convert OSM PBF files to Parquet format"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fsspec[s3]>=2026.2.0",
    "more-itertools>=10.7.0",
    "protobuf>=6",
    "pyarrow>=23",
    "tqdm>=4.67.3",
]

[project.scripts]
osmpq-pbf-extract = "osmpq.main:main"

[dependency-groups]
cli = [
    "click>=8.3.1",
]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.5",
    "ty>=0.0.24",
    "types-protobuf>=6.32.1.20260221",
    "types-tqdm>=4.67.3.20260303",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["F401"]

[tool.ruff.lint.isort]
case-sensitive = true
force-single-line = true

[tool.mypy]
no_incremental = true

[[tool.mypy.overrides]]
module = ["pyarrow.*", "fsspec.*"]
ignore_missing_imports = true
